<resources>
    <string name="app_name">Šalomat</string>

    <string name="hello_world">Hello world!</string>

    <string name="dobrodoslica">Klikni na posamezen vic, da ga vidiš v celoti. ;-) </string>
    <string name="easydialog_jokecontent">Za prehajanje med šalami podrsajte s prstom levo / desno.</string>



    <string name="action_settings">Settings</string>
    <string name="blondinkeNav">Blondinke</string>
    <string name="policaji">Policaji</string>
    <string name="policajiNav">Policaji</string>
    <string name="tvojaMamaNav">Tvoja Mama</string>
    <string name="gostilniskeNav">Gostilniški</string>
    <string name="janezNav">Janezek</string>
    <string name="mujohasoNav"><![CDATA[Mujo&Haso]]></string>
    <string name="crnihumorNav">Črni Humor</string>
    <string name="tasceNav">Tašče</string>
    <string name="politicniNav">Politični Vici</string>
    <string name="yugoviciNav">Yugo Vici</string>
    <string name="drawerOpen">Drawer Opened</string>
    <string name="drawerClosed">Drawer Closed</string>
    <string name="title_activity_joke_content">JokeContentActivity</string>
    <string name="shranjeniVici">Shranjeni</string>
    <string name="pribljubljeniNav">Shranjeni</string>
    <string name="nakljucniVici">Vsi Vici</string>
    <string name="opolzkeNav">Opolzki</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="banner_ad_unit_id">ca-app-pub-8869325879758697/1450671966</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="crnogorciNav">Črnogorci</string>
    <string name="bosanciNav">Bosanci</string>
    <string name="hrvatiNav">Hrvati</string>
    <string name="slovenciNav">Slovenci</string>
    <string name="srbiNav">Srbi</string>
    <string name="viciZaDobroJutro">Vici za dobro jutro</string>
    <string name="zakajAlternativa">Zakaj alternativa</string>
    <string name="najNajFoto">Naj, naj foto</string>
    <string name="najlepseTetoavze">Najlepše tetovaže</string>
    <string name="spoznajPomurje">Spoznaj Pomurje</string>
    <string name="yomomma_txt">Yo Momma!</string>
    <string name="blondes_nav">Blondes</string>
    <string name="sexrelated_nav">Sex Related</string>
    <string name="wordplay_nav">Wordplay Jokes</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="vnesiUpIme">Vaše uporabniško ime...</string>
    <string name="vnesiGeslo">Vnesite geslo ...</string>
    <string name="vpisiBtn">Vpiši me</string>
    <string name="nimateRacuna">Vkolikor še nimate svojega računa izpolnite spodnja polja za registracijo</string>
    <string name="ponovnoVnesiGeslo">Ponovno vnesite svoje geslo</string>
    <string name="registracijaBTN">Registriraj</string>
    <string name="ustvariNovRacun">Ustvari nov račun</string>
    <string name="nimasRacuna">Še nimaš svojega računa?</string>
    <string name="facebook_app_id">516771428501564</string>
    <string name="vpisFB">Vpiši se s Facebook-om:</string>
</resources>
