<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      android:id="@+id/drawerMenuID"

    >


    <group android:checkableBehavior="single" android:id="@+id/main_group">

    <item
        android:icon="@drawable/ic_send_black_24dp"
        android:id="@+id/blondinke_navigation"
        android:title="@string/blondinkeNav"></item>

        <item
            android:icon="@drawable/ic_send_black_24dp"
            android:id="@+id/opolzke_navigation"
            android:title="@string/opolzkeNav"></item>

    <item
        android:icon="@drawable/ic_send_black_24dp"
        android:id="@+id/policaji_navigation"
        android:title="@string/policajiNav"></item>

    <item
        android:icon="@drawable/ic_send_black_24dp"

        android:id="@+id/tvojamama_navigation"
        android:title="@string/tvojaMamaNav"></item>

    <item
        android:icon="@drawable/ic_send_black_24dp"
        android:id="@+id/gostilniske_navigation"
        android:title="@string/gostilniskeNav">
    </item>

    <item
        android:icon="@drawable/ic_send_black_24dp"
        android:id="@+id/janezek_navigation"
        android:title="@string/janezNav"></item>



    <item
        android:icon="@drawable/ic_send_black_24dp"
        android:id="@+id/crnihumor_navigation"
        android:title="@string/crnihumorNav"></item>


    <item
        android:icon="@drawable/ic_send_black_24dp"
        android:id="@+id/yugovici_navigation"
        android:title="@string/yugoviciNav"/>






    </group>

    <item android:title="Narodnosti">
        <menu>

            <item
                android:icon="@drawable/ic_send_black_24dp"
                android:id="@+id/crnogorci_navigation"
                android:title="@string/crnogorciNav"></item>
            />

            <item
                android:icon="@drawable/ic_send_black_24dp"
                android:id="@+id/mujohaso_navigation"
                android:title="@string/mujohasoNav"></item>


            <item
                android:icon="@drawable/ic_send_black_24dp"
                android:id="@+id/hrvati_navigation"
                android:title="@string/hrvatiNav"></item>

            <item
                android:icon="@drawable/ic_send_black_24dp"
                android:id="@+id/slovenci_navigation"
                android:title="@string/slovenciNav"></item>

            <item
                android:icon="@drawable/ic_send_black_24dp"
                android:id="@+id/srbi_navigation"
                android:title="@string/srbiNav"></item>

            />

        </menu>

    </item>

    <item android:title="Vici v Angleščini">
        <menu>

            <item
                android:icon="@drawable/ic_send_black_24dp"
                android:id="@+id/yomomma_navigation"
                android:title="@string/yomomma_txt"
                ></item>

            <item
                android:icon="@drawable/ic_send_black_24dp"
                android:id="@+id/blondes_navigation"
                android:title="@string/blondes_nav">

            </item>

            <item
                android:icon="@drawable/ic_send_black_24dp"
                android:id="@+id/sexrelated_navigation"
                android:title="@string/sexrelated_nav">

            </item>

            <item
                android:icon="@drawable/ic_send_black_24dp"
                android:id="@+id/wordplay_navigation"
                android:title="@string/wordplay_nav">

            </item>


        </menu>

    </item>

    <item android:title="Ostalo">
        <menu>

            <item
                android:icon="@drawable/ic_star_black_24dp"
                android:id="@+id/shranjeni_navigation"
                android:title="@string/shranjeniVici"
                ></item>

            <item
                android:icon="@drawable/ic_send_black_24dp"
                android:id="@+id/nakljucni_navigation"
                android:title="@string/nakljucniVici">

            </item>


        </menu>

    </item>

    <item android:title="Partnerske strani [FB]">
        <menu>

            <item
                android:icon="@drawable/ic_web_black_24dp"
                android:id="@+id/viciZaDobroJutro"
                android:title="@string/viciZaDobroJutro"></item>
            />

            <item
                android:icon="@drawable/ic_web_black_24dp"
                android:id="@+id/zakajAlternativa"
                android:title="@string/zakajAlternativa"></item>
            />



            <item
                android:icon="@drawable/ic_web_black_24dp"
                android:id="@+id/najNajFoto"
                android:title="@string/najNajFoto"></item>
            />

            <item
                android:icon="@drawable/ic_web_black_24dp"
                android:id="@+id/najlepseTetovaze"
                android:title="@string/najlepseTetoavze"></item>
            />

            <item
                android:icon="@drawable/ic_web_black_24dp"
                android:id="@+id/spoznajPomurje"
                android:title="@string/spoznajPomurje"></item>
            />



            />

        </menu>

    </item>






</menu>