<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nimateRacuna"
        android:textSize="16sp"
        android:layout_margin="16dp"
        android:textStyle="bold"
        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/vnesiUpIme"
        android:id="@+id/registrationUsername_ET"
        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:inputType="textPassword"
        android:hint="@string/vnesiGeslo"
        android:id="@+id/registrationPassword_ET"
        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:inputType="textPassword"
        android:hint="@string/ponovnoVnesiGeslo"
        android:id="@+id/registrationPasswordDoubleCheck_ET"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/registracijaBTN"
        android:id="@+id/registracija_BTN"/>

</LinearLayout>