<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">



    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/vnesiUpIme"
        android:id="@+id/enterUsername_ET"
        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:inputType="textPassword"
        android:hint="@string/vnesiGeslo"
        android:id="@+id/enterPassword_ET"
        />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/vpisiBtn"
        android:id="@+id/vpis_BTN"/>

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button_FB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp" />


    <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/nimasRacuna"
       android:layout_margin="16dp"
       android:textSize="20sp"
       android:autoLink="web"

       />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ustvariNovRacun"
        android:layout_margin="16dp"
        android:id="@+id/novRacun_BTN"
        />



</LinearLayout>